Basic worker Create/Update
