# services/dashboard/routes/workers.go
@@ -1,7 +1,9 @@
 package routes
 
 import (
+	"encoding/base64"
 	"net/http"
+	"strconv"
 
 	"github.com/go-chi/chi/v5"
 
@@ -30,7 +32,10 @@ func (h WorkerPageHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 func (h *WorkerPageHandler) SetupRoutes(r chi.Router) {
 	r.Get("/", h.listWorkers())
+	r.Get("/create", h.createWorkerPage())
+	r.Post("/create", h.createWorker())
 	r.Get("/{id}", h.workerDetails())
+	r.Patch("/{id}", h.updateWorker())
 }
 
 func (h *WorkerPageHandler) listWorkers() http.HandlerFunc {
@@ -54,17 +59,98 @@ func (h *WorkerPageHandler) listWorkers() http.HandlerFunc {
 func (h *WorkerPageHandler) workerDetails() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		page := &views.WorkerEditorPage{}
-		res, _, err := h.client.WorkersApi.ListWorkers(r.Context()).Execute()
+		workerID := chi.URLParam(r, "id")
+		res, _, err := h.client.WorkersApi.GetWorker(r.Context(), workerID).Execute()
 		if err != nil {
 			web.HTTPError(w, err)
 			return
 		}
-		page.Worker = res.Data[0]
+		resUC, _, err := h.client.WorkersApi.GetWorkerUserCode(r.Context(), workerID).Execute()
+		if err != nil {
+			web.HTTPError(w, err)
+			return
+		}
+		page.Worker = res.Data
+		page.UserCode = resUC.GetData()
 
 		if isHX(r) {
 			page.WriteBody(w)
 			return
 		}
 		views.WriteIndex(w, page)
+	}
+}
+
+func (h *WorkerPageHandler) updateWorker() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		workerID := chi.URLParam(r, "id")
+
+		var dto api.UpdateWorkerRequest
+		if err := r.ParseForm(); err != nil {
+			web.HTTPError(w, web.NewError(http.StatusBadRequest, "Bad request", ""))
+			return
+		}
+		if desc := r.FormValue("description"); desc != "" {
+			dto.Description = &desc
+		}
+		if stateStr := r.FormValue("state"); stateStr != "" {
+			state, err := strconv.ParseInt(stateStr, 10, 32)
+			if err != nil {
+				web.HTTPError(w, web.NewError(http.StatusBadRequest, "Bad request", ""))
+				return
+			}
+			dto.SetState(int32(state))
+		}
+		if userCode := r.FormValue("userCode"); userCode != "" {
+			dto.UserCode = &userCode
+		}
+
+		_, _, err := h.client.WorkersApi.UpdateWorker(r.Context(), workerID).UpdateWorkerRequest(dto).Execute()
+		if err != nil {
+			web.HTTPError(w, err)
+			return
+		}
+		w.Header().Set("HX-Redirect", "/workers")
+		w.WriteHeader(http.StatusOK)
+	}
+}
+
+func (h *WorkerPageHandler) createWorkerPage() http.HandlerFunc {
+	const defaultUserCode = `
+def process(payload, msg):
+        return payload
+    `
+	ucb64 := base64.StdEncoding.EncodeToString([]byte(defaultUserCode))
+	return func(w http.ResponseWriter, r *http.Request) {
+		page := &views.WorkerEditorPage{
+			UserCode: ucb64,
+		}
+		if isHX(r) {
+			page.WriteBody(w)
+			return
+		}
+		views.WriteIndex(w, page)
+	}
+}
+
+func (h *WorkerPageHandler) createWorker() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		if err := r.ParseForm(); err != nil {
+			web.HTTPError(w, web.NewError(http.StatusBadRequest, "Bad request", ""))
+			return
+		}
+		var dto api.CreateUserWorkerRequest
+		dto.SetName(r.FormValue("name"))
+		dto.SetUserCode(r.FormValue("userCode"))
+		dto.SetDescription(r.FormValue("description"))
+
+		_, _, err := h.client.WorkersApi.CreateWorker(r.Context()).CreateUserWorkerRequest(dto).Execute()
+		if err != nil {
+			web.HTTPError(w, err)
+			return
+		}
+
+		w.Header().Set("HX-Redirect", "/workers")
+		w.WriteHeader(http.StatusOK)
 	}
 }
